[kcm116] Wrapped tagging tool in simple Bootstrap markup

--- a/tagging_tool/style.css
+++ b/tagging_tool/style.css
@@ -1,22 +1,11 @@
-html, body {
+/* html, body {
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 h1 {
   text-align: center;
-}
-
-.container {
-  width: 90%;
-  margin: auto;
-}
-
-#helptext {
-  padding: 5px;
-  margin-bottom: 10px;
-  color: blue;
 }
 
 textarea {
