--- a/tagging_tool/static/style.css
+++ b/tagging_tool/static/style.css
@@ -1,9 +1,3 @@
-/* html, body {
-  padding: 0;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-} */
-
 h1 {
   text-align: center;
 }
@@ -14,14 +8,20 @@ textarea {
 
 #annotationWindow {
   line-height: 2rem;
-}
-
-.word {
-  transition: font-size 0.5s ease-out;
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 .word:hover {
   color: red;
   font-weight: bold;
-  font-size: 1.1rem;
+}
+ 
+#helptext {
+  font-weight: bold;
+}
+
+#consoleCard {
+  height: 200px;
+  overflow: auto;
 }
